k8s/api-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gha-indie-worker-api-server
  namespace: gha-indie-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gha-indie-worker-api-server
  template:
    metadata:
      labels:
        app: gha-indie-worker-api-server
    spec:
      containers:
        - name: api
          image: ghcr.io/gha-indie-worker/gha-indie-worker-api-server.rs:main
          ports:
            - containerPort: 8080
